force-app/main/default/objects/Event_Log__c/Event_Log__c.object-meta.xml
<CustomObject>
    <label>Event Log</label>
    <nameField>
        <label>Event Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>