force-app/main/default/objects/Event_Log__c/fields/Relates_To__c.field-meta.xml
<CustomField>
    <fullName>Relates_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relates To</label>
    <referenceTo>Event_Log__c</referenceTo>
    <relationshipLabel>Event Logs</relationshipLabel>
    <relationshipName>Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>