force-app/main/default/objects/Event_Log__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Divorce</fullName>
            </value>
            <value>
                <fullName>Divorce</fullName>
            </value>
            <value>
                <fullName>Non-Molestation</fullName>
            </value>
            <value>
                <fullName>Family Law</fullName>
            </value>
            <value>
                <fullName>Financial Proceedings</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>House Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>