force-app/main/default/objects/Event_Log__c/listViews/Events_Summaries.listView-meta.xml
<ListView>
    <fullName>Events_Summaries</fullName>
    <columns>NAME</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Relates_To__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Details__c</columns>
    <filterScope>Mine</filterScope>
    <label>Events Summaries</label>
</ListView>